--- a/creeping.tex
+++ b/creeping.tex
@@ -153,8 +153,10 @@ field for any external field, by using Fourier techniques.
 
 In Fourier space all the fields are given as
 \begin{align}
-\phi(\bfq) &=                    \int d\bfr \, \phi(\bfr) e^{-i\bfq\cdot\bfr}  \\
-\phi(\bfr) &= \frac 1{(2\pi)^d}  \int d\bfq \, \phi(\bfq) e^{ i\bfq\cdot\bfr} 
+  \label{eq:F_r_to_q}
+  \phi(\bfq) &=                    \int d\bfr \, \phi(\bfr) e^{-i\bfq\cdot\bfr}  \\
+  \label{eq:F_q_to_r}
+  \phi(\bfr) &= \frac 1{(2\pi)^d}  \int d\bfq \, \phi(\bfq) e^{ i\bfq\cdot\bfr} 
 \end{align}
 
 Stokes' equation for Cartesian coordinate $i$ reads
